// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/AuditDetail/OverviewList render snap list when isArchive is false 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning css-dev-only-do-not-override-bj9uhl"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col
                      style="width: 180px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        数据源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        状态
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核通过率
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核结果评分
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        待操作人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线开始时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线结束时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        定时上线时间
                      </th>
                      <th
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        scope="col"
                        style="position: sticky; right: 0px;"
                      >
                        操作
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                        colspan="10"
                      >
                        <div
                          class="ant-table-expanded-row-fixed"
                          style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                        />
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/OverviewList render snap list when isArchive is true 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        数据源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        状态
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核通过率
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核结果评分
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        待操作人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线开始时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线结束时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        定时上线时间
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="40"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        mysql
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-3q8fl"
                        >
                          <span
                            class="custom-icon css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.875 1.51554C7.57115 1.11362 8.42885 1.11362 9.125 1.51554L13.0532 3.78349C13.7494 4.18542 14.1782 4.9282 14.1782 5.73205V10.2679C14.1782 11.0718 13.7494 11.8146 13.0532 12.2165L9.125 14.4845C8.42885 14.8864 7.57115 14.8864 6.875 14.4845L2.9468 12.2165C2.25064 11.8146 1.8218 11.0718 1.8218 10.2679V5.73205C1.8218 4.9282 2.25064 4.18542 2.9468 3.78349L6.875 1.51554Z"
                                stroke="#41BF9A"
                                stroke-width="1.5"
                              />
                              <path
                                d="M5.08325 7.99996L7.16659 10.0833L11.3333 5.91663"
                                stroke="#41BF9A"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </svg>
                          </span>
                          <span>
                            上线成功
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        <span>
                          100%
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        100
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                      <td
                        class="ant-table-cell"
                      >
                        admin
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="41"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        mysql2
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-3q8fl"
                        >
                          <span
                            class="custom-icon css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.875 1.51554C7.57115 1.11362 8.42885 1.11362 9.125 1.51554L13.0532 3.78349C13.7494 4.18542 14.1782 4.9282 14.1782 5.73205V10.2679C14.1782 11.0718 13.7494 11.8146 13.0532 12.2165L9.125 14.4845C8.42885 14.8864 7.57115 14.8864 6.875 14.4845L2.9468 12.2165C2.25064 11.8146 1.8218 11.0718 1.8218 10.2679V5.73205C1.8218 4.9282 2.25064 4.18542 2.9468 3.78349L6.875 1.51554Z"
                                stroke="#41BF9A"
                                stroke-width="1.5"
                              />
                              <path
                                d="M5.08325 7.99996L7.16659 10.0833L11.3333 5.91663"
                                stroke="#41BF9A"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </svg>
                          </span>
                          <span>
                            上线成功
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        <span>
                          100%
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        100
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                      <td
                        class="ant-table-cell"
                      >
                        admin
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/OverviewList render snap list when order status is finished 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup />
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        数据源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        状态
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核通过率
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核结果评分
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        待操作人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线开始时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线结束时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        定时上线时间
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="40"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        mysql
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-3q8fl"
                        >
                          <span
                            class="custom-icon css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.875 1.51554C7.57115 1.11362 8.42885 1.11362 9.125 1.51554L13.0532 3.78349C13.7494 4.18542 14.1782 4.9282 14.1782 5.73205V10.2679C14.1782 11.0718 13.7494 11.8146 13.0532 12.2165L9.125 14.4845C8.42885 14.8864 7.57115 14.8864 6.875 14.4845L2.9468 12.2165C2.25064 11.8146 1.8218 11.0718 1.8218 10.2679V5.73205C1.8218 4.9282 2.25064 4.18542 2.9468 3.78349L6.875 1.51554Z"
                                stroke="#41BF9A"
                                stroke-width="1.5"
                              />
                              <path
                                d="M5.08325 7.99996L7.16659 10.0833L11.3333 5.91663"
                                stroke="#41BF9A"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </svg>
                          </span>
                          <span>
                            上线成功
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        <span>
                          100%
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        100
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                      <td
                        class="ant-table-cell"
                      >
                        admin
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="41"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        mysql2
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-3q8fl"
                        >
                          <span
                            class="custom-icon css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.875 1.51554C7.57115 1.11362 8.42885 1.11362 9.125 1.51554L13.0532 3.78349C13.7494 4.18542 14.1782 4.9282 14.1782 5.73205V10.2679C14.1782 11.0718 13.7494 11.8146 13.0532 12.2165L9.125 14.4845C8.42885 14.8864 7.57115 14.8864 6.875 14.4845L2.9468 12.2165C2.25064 11.8146 1.8218 11.0718 1.8218 10.2679V5.73205C1.8218 4.9282 2.25064 4.18542 2.9468 3.78349L6.875 1.51554Z"
                                stroke="#41BF9A"
                                stroke-width="1.5"
                              />
                              <path
                                d="M5.08325 7.99996L7.16659 10.0833L11.3333 5.91663"
                                stroke="#41BF9A"
                                stroke-linejoin="round"
                                stroke-width="1.5"
                              />
                            </svg>
                          </span>
                          <span>
                            上线成功
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        <span>
                          100%
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        100
                      </td>
                      <td
                        class="ant-table-cell"
                      />
                      <td
                        class="ant-table-cell"
                      >
                        admin
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/AuditDetail/OverviewList render snap list when task is executing 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col />
                    <col
                      style="width: 180px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        数据源
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        状态
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核通过率
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                        style="text-align: right;"
                      >
                        审核结果评分
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        待操作人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线人
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线开始时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        上线结束时间
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        定时上线时间
                      </th>
                      <th
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        scope="col"
                        style="position: sticky; right: 0px;"
                      >
                        操作
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="42"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        mysql2
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-3q8fl"
                        >
                          <span
                            class="custom-icon css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.875 1.51554C7.57115 1.11362 8.42885 1.11362 9.125 1.51554L13.0532 3.78349C13.7494 4.18542 14.1782 4.9282 14.1782 5.73205V10.2679C14.1782 11.0718 13.7494 11.8146 13.0532 12.2165L9.125 14.4845C8.42885 14.8864 7.57115 14.8864 6.875 14.4845L2.9468 12.2165C2.25064 11.8146 1.8218 11.0718 1.8218 10.2679V5.73205C1.8218 4.9282 2.25064 4.18542 2.9468 3.78349L6.875 1.51554Z"
                                stroke="#6094FC"
                                stroke-width="1.5"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M7.99995 3.15466V7.99996L3.79321 10.4038C3.87976 10.5615 4.00868 10.6956 4.16982 10.7886L7.49995 12.7113C7.80935 12.8899 8.19055 12.8899 8.49995 12.7113L11.8301 10.7886C12.1395 10.61 12.3301 10.2799 12.3301 9.92261V6.07731C12.3301 5.72005 12.1395 5.38992 11.8301 5.21129L8.49995 3.28864C8.34525 3.19932 8.1726 3.15466 7.99995 3.15466Z"
                                fill="#6094FC"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span>
                            正在上线
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        <span>
                          100%
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                        style="text-align: right;"
                      >
                        100
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <span
                              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-bj9uhl"
                            >
                              <span
                                class="ant-avatar-string"
                                style="transform: scale(1) translateX(-50%);"
                              >
                                A
                              </span>
                            </span>
                          </div>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        admin
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2024-01-17 13:23:32
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  中止上线
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            />
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            />
                            <div
                              class="ant-space-item"
                            />
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
